--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,6 @@
     <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
     <modules>
-        <module>apm-demo</module>
+        <module>agent</module>
     </modules>
 </project>
