--- a/pom.xml
+++ b/pom.xml
@@ -4,10 +4,11 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>poets11</groupId>
-    <artifactId>demo</artifactId>
+    <groupId>sandbox9.shiva</groupId>
+    <artifactId>shiva-parentpom</artifactId>
     <packaging>pom</packaging>
-    <version>1.0-SNAPSHOT</version>
+    <version>0.0.1-SNAPSHOT</version>
+
     <modules>
         <module>agent</module>
     </modules>
