--- a/pom.xml
+++ b/pom.xml
@@ -4,8 +4,8 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>sandbox9.shiva</groupId>
-    <artifactId>shiva-parentpom</artifactId>
+    <groupId>sandbox9.trinity</groupId>
+    <artifactId>trinity-parentpom</artifactId>
     <packaging>pom</packaging>
     <version>0.0.1-SNAPSHOT</version>
 
