--- a/agent/pom.xml
+++ b/agent/pom.xml
@@ -19,31 +19,20 @@
             <version>3.19.0-GA</version>
         </dependency>
         <dependency>
-            <groupId>javax.servlet</groupId>
-            <artifactId>javax.servlet-api</artifactId>
-            <version>3.1.0</version>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-webmvc</artifactId>
-            <version>4.1.4.RELEASE</version>
-        </dependency>
-        <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
             <version>2.4.4</version>
+        </dependency>
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.3.1</version>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>4.12</version>
         </dependency>
-
-        <!--<dependency>-->
-            <!--<groupId>mysql</groupId>-->
-            <!--<artifactId>mysql-connector-java</artifactId>-->
-            <!--<version>5.1.34</version>-->
-        <!--</dependency>-->
     </dependencies>
 
     <build>
@@ -56,7 +45,7 @@
                         <manifestEntries>
                             <premain-class>fury.marvel.trinity.agent.AgentMain</premain-class>
                             <can-retransform-classes>true</can-retransform-classes>
-                            <boot-class-path>javassist-3.18.1-GA.jar jackson-databind-2.4.4.jar jackson-core-2.4.4.jar jackson-annotations-2.4.4.jar javax.servlet-api-3.0.1.jar</boot-class-path>
+                            <boot-class-path>javassist-3.18.1-GA.jar gson-2.3.1.jar</boot-class-path>
                         </manifestEntries>
                     </archive>
                 </configuration>
