--- a/agent/pom.xml
+++ b/agent/pom.xml
@@ -19,30 +19,9 @@
             <version>3.19.0-GA</version>
         </dependency>
         <dependency>
-            <groupId>com.fasterxml.jackson.core</groupId>
-            <artifactId>jackson-databind</artifactId>
-            <version>2.4.4</version>
-        </dependency>
-        <dependency>
-            <groupId>com.google.code.gson</groupId>
-            <artifactId>gson</artifactId>
-            <version>2.3.1</version>
-        </dependency>
-        <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>4.12</version>
-        </dependency>
-        <dependency>
-            <groupId>com.googlecode.json-simple</groupId>
-            <artifactId>json-simple</artifactId>
-            <version>1.1.1</version>
-        </dependency>
-        <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-api</artifactId>
-            <version>1.7.10</version>
-            <scope>provided</scope>
         </dependency>
     </dependencies>
 
@@ -54,9 +33,8 @@
                 <configuration>
                     <archive>
                         <manifestEntries>
-                            <premain-class>fury.marvel.trinity.agent.AgentMain</premain-class>
+                            <premain-class>hanmi.framework.debugger.bci.agent.AgentMain</premain-class>
                             <can-retransform-classes>true</can-retransform-classes>
-                            <boot-class-path>javassist-3.19.0-GA.jar gson-2.3.1.jar</boot-class-path>
                         </manifestEntries>
                     </archive>
                 </configuration>
